<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_gads_leaderboard_background">



    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="294dp"
        android:layout_height="31dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/google_africa_logo"
        android:contentDescription="@string/google_africa_logo_description" />

    <TextView
        android:id="@+id/project_submission"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/project_submission_title"
        android:textColor="@android:color/holo_orange_light"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView7" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/project_submission"
        app:srcCompat="@drawable/seperator"
        android:contentDescription="@string/title_and_logo_seperator" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="93dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="1dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView8"
        app:layout_constraintVertical_bias="0.165">

        <EditText
            android:id="@+id/text_first_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:background="@drawable/edit_text_rounded_corners"
            android:ems="10"
            android:hint="@string/first_name_hint"
            android:inputType="textPersonName"
            android:padding="15dp"
            android:textColor="@color/dark_grey"
            android:textSize="16sp"
            android:textStyle="bold"
            android:autofillHints=""/>

        <EditText
            android:id="@+id/text_last_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:background="@drawable/edit_text_rounded_corners"
            android:ems="10"
            android:inputType="textPersonName"
            android:padding="15dp"
            android:hint="@string/last_name"
            android:textColor="@color/dark_grey"
            android:textSize="16sp"
            android:textStyle="bold"
            android:autofillHints="no" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.0">


        <EditText
            android:id="@+id/text_email_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/edit_text_rounded_corners"
            android:ems="10"
            android:hint="@string/email_address"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:padding="15dp"
            android:textColor="@color/dark_grey"
            android:textSize="14sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/text_github_link"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/edit_text_rounded_corners"
            android:ems="10"
            android:hint="@string/project_on_github_link"
            android:importantForAutofill="no"
            android:inputType="textWebEditText"
            android:padding="15dp"
            android:textColor="@color/dark_grey"
            android:textSize="14sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button_submit"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:background="@drawable/button_rounded_corners"
            android:paddingStart="35dp"
            android:paddingEnd="35dp"
            android:text="@string/submit"
            android:textAllCaps="false"
            android:textColor="@color/whiteNormal"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>